--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 cloud-csye-6225-a49ce1dc3138.json
 # Local .terraform directories
 **/.terraform/*
-
+.terraform.lock.hcl
 # .tfstate files
 *.tfstate
 *.tfstate.*
